--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/main.js": "/js/main.js",
     "/css/app.css": "/css/app.css",
+    "/css/sell.css": "/css/sell.css",
     "/css/w2ui-custom.css": "/css/w2ui-custom.css",
-    "/css/main.css": "/css/main.css"
+    "/css/main.css": "/css/main.css",
+    "/js/main.js": "/js/main.js"
 }
